[package]
name = "fluent-hash"
description = "A lightweight library which provides a fluent interface for generating SHA-1 and SHA-2 digests."
version = "0.2.3"
edition = "2021"
license = "Apache-2.0"
authors = ["Web3 Developer @ Web3Developer.io"]
documentation = "https://docs.rs/fluent-hash/"
homepage = "https://github.com/web3-developer/fluent-hash#readme"
repository = "https://github.com/web3-developer/fluent-hash"
categories = ["cryptography"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
ring = "0.17.6"
